k8s/reward-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reward-ui
  namespace: sandbox
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reward-ui
  template:
    metadata:
      labels:
        app: reward-ui
    spec:
      containers:
        - name: reward-ui
          image: pary123456789/v-3:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: reward-ui-svc
  namespace: sandbox
spec:
  type: ClusterIP
  selector:
    app: reward-ui
  ports:
    - name: http
      port: 80
      targetPort: 3000
