k8s/wrw-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wrw-ingress
  namespace: sandbox
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wrw.app
        - www.wrw.app
      secretName: prod-ssl-secret
  rules:
    - host: wrw.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reward-ui-svc
                port:
                  number: 80
